Add PDF export for bridge boards with 3x3 layout and equal columns
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@bridge-tools/core": "^0.3.1",
     "@bridge-tools/generator": "^0.2.2",
+    "dejavu-fonts-ttf": "^2.37.3",
+    "jspdf": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
